Fix name is cutting off while creating view

--- a/frontend/src/pages/home/ui/HomePage.module.scss
+++ b/frontend/src/pages/home/ui/HomePage.module.scss
@@ -50,5 +50,5 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-    padding-top: 8px;
+    padding-top: 4px !important;
 }
